--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --backgroundPrimary: #D25D5D;
 }
 
 html,
@@ -26,4 +27,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.pre-line-text {
+  white-space: pre-line;
 }
