--- a/frontend/src/app/styles/page.module.css
+++ b/frontend/src/app/styles/page.module.css
@@ -37,3 +37,13 @@
 .backgroundPrimary {
     background-color: var(--backgroundPrimary);
 }
+
+.imagesize {
+    height: "600px";
+    position: "relative";
+}
+
+.link {
+    color: cornflowerblue;
+    text-decoration: underline;
+}
