--- a/frontend/src/app/styles/globals.css
+++ b/frontend/src/app/styles/globals.css
@@ -4,6 +4,7 @@
   --foreground: #171717;
   --backgroundPrimary: #D25D5D;
   --backgroundSecondary: #B9375D;
+  --backgroundSecondaryComplement: #FFB646;
   --backgroundThird: #E7D3D3;
 }
 
