Frontend: catalog + cartes des produits

--- a/frontend/src/app/styles/page.module.css
+++ b/frontend/src/app/styles/page.module.css
@@ -662,3 +662,10 @@
 .popupModal::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.catalogGridContainer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 375px);
+    gap: 30px; 
+    justify-content: center;
+}
